--- a/MyMovieLocker/index.html
+++ b/MyMovieLocker/index.html
@@ -11,7 +11,7 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="login.html">Login/Registration</a></li>
+				<li><a href="../Login/login.php">Login/Registration</a></li>
 				<li><a href="faq.html">FAQ</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
