--- a/MyMovieLocker/FAQ.html
+++ b/MyMovieLocker/FAQ.html
@@ -8,26 +8,41 @@
 
 <body>
 	<header>
-		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="login.html">Login/Registration</a></li>
-				<li><a href="faq.html">FAQ</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
+		<body>
+			  <nav class="navbar">
+				    <!-- LOGO -->
+				    <div class="logo">MyMovieLocker</div>
+		
+				    <!-- NAVIGATION MENU -->
+				    <ul class="nav-links">
+		
+					      <!-- NAVIGATION MENUS -->
+					      <div class="menu">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="faq.html">FAQ</a></li>
+						<li><a href="contact.html">Contact</a></li>
+						<li><a href="login.html">Login/Registration</a></li>
+						      
+					</div>
+					    </ul>
+				  </nav>
+		</body>
+		</header>
 
 	<main>
-		<h1>Frequently Asked Questions</h1>
-		<dl>
-			<dt>Question 1:</dt>
-			<dd>Answer 1.</dd>
-			<dt>Question 2:</dt>
-			<dd>Answer 2.</dd>
-			<dt>Question 3:</dt>
-			<dd>
-			<dd>Answer 2.</dd>
+		<h1>Frequently Asked Questions</h1><br>
+		<ul>
+			<li>Question 1: What is the use of this website? </li>
+			<dd>MyMovieLocker keep track of watched movies, rate and review them. Create lists, choose from a catalog or request to add a 
+				movie to the database. Chat with similar movie fans or debate with opposing reviewers.</dd>
+				<br>
+			<li>Question 2: What if the movie you are searching for is not present in the database?</li>
+			<dd>In the contact page, you can send a concern about not having a movie not in the database, and we can add it ASAP.</dd>
+				<br>
+			<li>Question 3: Can I seperate my reviews of movies into groups?</li>
+			<dd>Yes! We have a main feature of creating LOCKERS, which are like playlists for movies and adding as much movies you would like into as many lockers you have created.</dd>
+				<br>
+		</ul>
 			<footer>
 				<p>&copy; 2023 MyMovieLocker. All rights reserved.</p>
 			</footer>
