--- a/MyMovieLocker/contact.html
+++ b/MyMovieLocker/contact.html
@@ -8,14 +8,24 @@
 
 <body>
 	<header>
-		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="login.html">Login/Registration</a></li>
-				<li><a href="faq.html">FAQ</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
+		  <nav class="navbar">
+			    <!-- LOGO -->
+			    <div class="logo">MyMovieLocker</div>
+	
+			    <!-- NAVIGATION MENU -->
+			    <ul class="nav-links">
+	
+				      <!-- NAVIGATION MENUS -->
+				      <div class="menu">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="faq.html">FAQ</a></li>
+					<li><a href="contact.html">Contact</a></li>
+					<li><a href="login.html">Login/Registration</a></li>
+					      
+				</div>
+				    </ul>
+			  </nav>
+	</body>
 	</header>
 
 	<main>
@@ -31,7 +41,7 @@
 		</form>
 	</main>
 
-	<footer>
+	<footer><br><br>
 		<p>&copy; 2023 MyMovieLocker. All rights reserved.</p>
 	</footer>
 
